--- a/public/scss/partials/_pdf-splitter.scss
+++ b/public/scss/partials/_pdf-splitter.scss
@@ -1,7 +1,7 @@
 .pdf-splitter {
   background-color: darken($lightColor, 10);
   position: fixed;
-  z-index: 101;
+  z-index: 102;
   top: 0;
   left: 0;
   bottom: 0;
