--- a/public/scss/partials/_rome.scss
+++ b/public/scss/partials/_rome.scss
@@ -10,6 +10,7 @@
 
 .rd-container-attachment {
   position: absolute;
+  z-index: 2;
 }
 
 .rd-month {
