--- a/public/scss/partials/_status.scss
+++ b/public/scss/partials/_status.scss
@@ -157,6 +157,10 @@
 
 .status-container {
   display: flex;
+  
+  .form-row {
+    z-index: auto;
+  }
   .label-widget {
     > label {
       display: none;
@@ -179,7 +183,6 @@
         max-width: 150px;
       }
     }
-//    width: $statusSize + 1rem;
   }
   
 }
